--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,9 @@
         <module>usian_item_feign</module>
         <module>usian_item_web</module>
         <module>usian_item_service</module>
+        <module>usian_content_service</module>
+        <module>usian_content_feign</module>
+        <module>usian_content_web</module>
     </modules>
 
     <!--Spring Boot 父工程-->
@@ -33,9 +36,17 @@
         <pagehelper-version>1.2.10</pagehelper-version>
         <logback-version>5.0</logback-version>
         <spring-mybats-version>2.0.1</spring-mybats-version>
+        <fastDFS-client-version>1.26.2</fastDFS-client-version>
     </properties>
     <dependencyManagement>
         <dependencies>
+            <!--fastdfs图片上传下载-->
+            <dependency>
+                <groupId>com.github.tobato</groupId>
+                <artifactId>fastdfs-client</artifactId>
+                <version>${fastDFS-client-version}</version>
+            </dependency>
+
             <!--Spring Cloud Platform-->
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
