--- a/usian_item_service/pom.xml
+++ b/usian_item_service/pom.xml
@@ -33,6 +33,12 @@
             <artifactId>common_utils</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.usian</groupId>
+            <artifactId>common_redis</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 </project>
