--- a/usian_content_service/pom.xml
+++ b/usian_content_service/pom.xml
@@ -33,6 +33,13 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
         </dependency>
+        <!--common_redis依赖-->
+        <dependency>
+            <groupId>com.usian</groupId>
+            <artifactId>common_redis</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 </project>
