--- a/usian_content_service/src/main/resources/application.yml
+++ b/usian_content_service/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
     name: usian-content-service
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://127.0.0.1:3306/usian?characterEncoding=UTF-8
+    url: jdbc:mysql://127.0.0.1:3306/usian?useUnicode\=true&characterEncoding\=UTF-8&zeroDateTimeBehavior\=convertToNull&allowMultiQueries\=true
     username: root
     password:
     type: com.alibaba.druid.pool.DruidDataSource
