1、增加商品搜索功能； 2、完成添加商品以后的ES中索引同步功能

--- a/usian_search_service/src/main/resources/application.yml
+++ b/usian_search_service/src/main/resources/application.yml
@@ -10,6 +10,14 @@ spring:
   data:
     elasticsearch:
       cluster-nodes: 192.168.157.139:9200,192.168.157.140:9200
+  rabbitmq:
+    host: 192.168.157.132
+    username: admin
+    password: 1111
+    virtual-host: /
+    listener:
+      direct:
+        acknowledge-mode: manual
 server:
   port: 8095
 eureka:
