--- a/usian_search_service/src/main/resources/application.yml
+++ b/usian_search_service/src/main/resources/application.yml
@@ -29,3 +29,8 @@ eureka:
 ES_INDEX_NAME: usian
 #类型名称
 ES_TYPE_NAME: item
+
+#订单
+ORDER_ID_KEY: ORDER_ID_KEY
+ORDER_ID_BEGIN: 100544
+ORDER_ITEM_ID_KEY: ORDER_ITEM_ID_KEY
