--- a/common_pojo/pom.xml
+++ b/common_pojo/pom.xml
@@ -11,5 +11,16 @@
 
     <artifactId>common_pojo</artifactId>
 
-
+    <dependencies>
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger2</artifactId>
+            <version>2.8.0</version>
+        </dependency>
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger-ui</artifactId>
+            <version>2.8.0</version>
+        </dependency>
+    </dependencies>
 </project>
